--- a/중요.tex
+++ b/중요.tex
@@ -1,1 +1,7 @@
 매일 매일 파일 하나 것허브에 올리기(잔디 심는거 중요)
+
+피노나치 수열 재귀함수
+2차원 배열에서 주 대각선의 합(왼쪽 위에서 오른쪽 아래로, 00, 11, 22 ...)
+팬린드롬 판별 회문 대소문자 구별
+문자열 입력 받아 대문자, 소문자 변환
+숫자 입력받아 몇자리 수인지?
